[package]
name = "uline-atc"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bveats-rs = { path = "./bveats-rs" }
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
winapi = { version = "0.3", features = ["winuser", "libloaderapi", ] }
